# ADCAM

./: .blackduckignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  adsd__errs_8h_source.html  azure-pipelines.yml  camera_8h_source.html  camera__definitions_8h_source.html  classaditof_1_1_a_d_s_d_errors.html  classaditof_1_1_camera.html  classaditof_1_1_depth_sensor_interface.html  classaditof_1_1_frame.html  classaditof_1_1_frame_handler.html  classaditof_1_1_sensor_enumerator_factory.html  classaditof_1_1_sensor_enumerator_interface.html  classaditof_1_1_system.html  connections_8h_source.html  depth__sensor__interface_8h_source.html  frame_8h_source.html  frame__definitions_8h_source.html  frame__handler_8h_source.html  frame__operations_8h_source.html  namespaceaditof.html  sensor__definitions_8h_source.html  sensor__enumerator__factory_8h_source.html  sensor__enumerator__interface_8h_source.html  status__definitions_8h_source.html  structaditof_1_1_bits_configuration.html  structaditof_1_1_camera_details.html  structaditof_1_1_depth_sensor_mode_details.html  structaditof_1_1_driver_configuration.html  structaditof_1_1_frame_data_details.html  structaditof_1_1_frame_details.html  structaditof_1_1_intrinsic_parameters.html  structaditof_1_1_metadata.html  structaditof_1_1_point3_i__sdk.html  structaditof_1_1_sensor_details.html  system_8h_source.html
.github/: copilot-instructions.md
apps/: CMakeLists.txt
apps/discovery_server/: CMakeLists.txt  README.md  config.json  discovery-server.service  install-service.sh  main.cpp  uninstall-service.sh
apps/server/: CMakeLists.txt  buffer.proto  governor_control.sh  server.cpp  server.h
cmake/: platform_detection.cmake  readme.md  version.h.cmakein
dependencies/: CMakeLists.txt
doc/: CMakeLists.txt  network-build.md  readme.md
doc/user-guide/: ADCAM-CameraKit-010.html  ADCAM-CameraKit-010.md  ADCAM-CameraKit-020.html  ADCAM-CameraKit-020.md  ADCAM-CameraKit-100.html  ADCAM-CameraKit-100.md  ADTF3175D-EvalKit-610.md  CMakeLists.txt  extract_gui_markdown.py  readme.md
doc/user-guide/other/: example-cfg.json
examples/: CMakeLists.txt  readme.md
examples/adsd3500_sample_program/: CMakeLists.txt  README.md  visualize.py
examples/adsd3500_sample_program/include/: adsd3500_interrupt_notifier.h  adsd3500_util.h
examples/adsd3500_sample_program/src/: adsd3500_interrupt_notifier.cpp  adsd3500_util.cpp  run_adsd3500.cpp
examples/bindings/python/: CMakeLists.txt  adcam_virtual_env.sh  readme.md  requirements.txt
examples/bindings/python/coregistration/: coregistration.py  sample_calib.json
examples/bindings/python/deprecated/data_collect/: CMakeLists.txt  data_collect.py
examples/bindings/python/deprecated/gesture_rec/: notebook.py  process.py
examples/bindings/python/deprecated/maskr_cnn/: maskr_cnn.py
examples/bindings/python/deprecated/saveCCBToFile/: saveCCBToFile.py
examples/bindings/python/dnn/: CMakeLists.txt  dnn.py
examples/bindings/python/dual_cameras/: dual_cameras.py
examples/bindings/python/dynamic_mode_switching/: CMakeLists.txt  dynamic_mode_switching.py  readme.md
examples/bindings/python/first_frame/: CMakeLists.txt  first_frame.py
examples/bindings/python/gesture_rec/: notebook.py
examples/bindings/python/rawparser/: CMakeLists.txt  rawparser.py  rawparser_visualize.py  readme.md
examples/bindings/python/showPointCloud/: showPointCloud.py
examples/bindings/python/skeletal_tracking/: CMakeLists.txt  skeletal_tracking.py
examples/bindings/python/skeletal_tracking_in_pointcloud/: skeletal_tracking_in_pointcloud.py
examples/bindings/python/streaming/: CMakeLists.txt  depth-image-animation-pygame.py
examples/data_collect/: main.cpp
examples/first-frame/: CMakeLists.txt  main.cpp
examples/tof-viewer/: BUILD_REFERENCE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  JETSON_POINT_CLOUD_OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  tof-tools.config
examples/tof-viewer/include/: ADIController.h  ADIImGUIExtensions.h  ADIMainWindow.h  ADIOpenFile.h  ADIPlatformConfig.h  ADIPointCloudShaders.h  ADITypes.h  ADIView.h  CompanyIcon.png.h  CompanyLogo.png.h  filesystem.hpp  roboto-semicondensed-bold.h  safequeue.h  stb_image.h
examples/tof-viewer/src/: ADIController.cpp  ADIImGUIExtensions.cpp  ADIMainCameraControl.cpp  ADIMainControl.cpp  ADIMainCore.cpp  ADIMainDisplayHelp.cpp  ADIMainFrames.cpp  ADIMainInfo.cpp  ADIMainLog.cpp  ADIMainWindow.cpp  ADIOpenFile.cpp  ADIShader.h  ADIToF.cpp  ADIView.cpp  ADIViewCuda.cuh  ADIView_cuda.cu  ADIView_cuda_wrapper.cpp  ADIView_neon.cpp  fileDialog.mm  wmain.cpp
examples/tof-viewer2/: ARM64_CUDA_README.md  CMakeLists.txt  QUICK_REF_JETSON_OPTIMIZATIONS.md
examples/tof-viewer2/include/: ADIController.h  ADIMainWindow.h  ADIView.h  roboto-bold.h  roboto-regular.h
examples/tof-viewer2/src/: ADIMainCameraControl.cpp  ADIMainControl.cpp  ADIMainCore.cpp  ADIMainDisplayHelp.cpp  ADIMainFrames.cpp  ADIToF.cpp  ADIView.cpp  ADIViewCuda.cuh  ADIView_cuda.cu  ADIView_cuda_wrapper.cpp  ADIView_neon.cpp
scripts/: readme.md
tests/sdk/: CMakeLists.txt
tests/sdk/include/: test_utils.h
tests/sdk/sdk_stream_test/: CMakeLists.txt  main.cpp
tests/sdk/src/: test_utils.cpp
tests/sdk/system/: system-data_collect_test.cpp  system-first_frame_test.cpp  system-tof_viewer_test.cpp
tools/: CMakeLists.txt  compare_depths.py
tools/debug_apps/: CMakeLists.txt  README.md
tools/debug_apps/common/include/: v4l2_common.h
tools/debug_apps/ctrl_app/: CMakeLists.txt  ctrl_app.cpp  infile.txt
tools/host/powershell/: README.md  set-ip.ps1
tools/nvm_tools/: CMakeLists.txt  README.md
tools/nvm_tools/CCB_CRC_READ/: CCB_CRC_READ.cpp  CMakeLists.txt
tools/nvm_tools/CCB_READ/: CCB_READ.cpp  CMakeLists.txt
tools/nvm_tools/CCB_WRITE/: CCB_WRITE.cpp  CMakeLists.txt
tools/nvm_tools/NVM_READ/: NVM_READ.cpp
tools/nvm_tools/NVM_WRITE/: CMakeLists.txt  NVM_WRITE.cpp
tools/nvm_tools/adsd3500_fw_update/: Adsd3500.cpp  Adsd3500.h  CMakeLists.txt  main.cpp
tools/nvm_tools/common/: v4l2_common.cpp
tools/nvm_tools/common/include/: compute_crc.h
(+233 files in other folders)
